logs/neurobytes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/neurobytes'...
Compiling './lib/python3.5/site-packages/neurobytes/cli.py'...
***   File "./lib/python3.5/site-packages/neurobytes/cli.py", line 58
    print "connect error"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/neurobytes/firmware'...
Compiling './lib/python3.5/site-packages/neurobytes/firmware/firmware.py'...
***   File "./lib/python3.5/site-packages/neurobytes/firmware/firmware.py", line 44
    print self.file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/neurobytes/gdbProcess.py'...
***   File "./lib/python3.5/site-packages/neurobytes/gdbProcess.py", line 74
    print "Failed to start GDB server"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/neurobytes/interfaces'...
Compiling './lib/python3.5/site-packages/neurobytes/interfaces/blackmagic.py'...
***   File "./lib/python3.5/site-packages/neurobytes/interfaces/blackmagic.py", line 44
    print f_status
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/neurobytes/interfaces/interface.py'...
***   File "./lib/python3.5/site-packages/neurobytes/interfaces/interface.py", line 11
    print self.file
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/neurobytes-0.16.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
